--- a/src/frontend/src/app/catalogs/catalogs.component.html
+++ b/src/frontend/src/app/catalogs/catalogs.component.html
@@ -1,1 +1,7 @@
-<p>catalogs works!</p>
+<h1>Catalogs</h1>
+<ul>
+  <li *ngFor="let item of catalogs$ | async">
+    <span>{{ item.id }}</span>
+    <span>{{ item.name }}</span>
+  </li>
+</ul>
