small ui styling

--- a/src/frontend/src/app/catalogs/catalogs.component.html
+++ b/src/frontend/src/app/catalogs/catalogs.component.html
@@ -2,6 +2,6 @@
 <ul>
   <li *ngFor="let item of catalogs$ | async">
     <span>{{ item.id }}</span>
-    <span>{{ item.name }}</span>
+    <span>&nbsp;{{ item.name }}</span>
   </li>
 </ul>
