--- a/src/frontend/src/app/orders/orders.component.html
+++ b/src/frontend/src/app/orders/orders.component.html
@@ -2,8 +2,8 @@
 <ul>
   <li *ngFor="let item of orders$ | async">
     <span>{{ item.id }}</span>
-    <span>{{ item.article }}</span>
-    <span>{{ item.quantity }}</span>
-    <span>{{ item.price }}</span>
+    <span>&nbsp;{{ item.article }}</span>
+    <span>&nbsp;{{ item.quantity }}</span>
+    <span>&nbsp;{{ item.price }}</span>
   </li>
 </ul>
