added angular-oauth2-oidc client to frontend

--- a/src/frontend/src/app/sidebar/sidebar.component.html
+++ b/src/frontend/src/app/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
 <div class="sidebar__content">
   <ul>
     <li routerLinkActive="active" class="menu__item">
-      <a routerLink="/home">Home</a>
+      <a routerLink="/home">{{ userName }}</a>
     </li>
     <li routerLinkActive="active" class="menu__item">
       <a routerLink="/catalogs">Catalog</a>
