running https sample

--- a/src/frontend/src/app/sidebar/sidebar.component.html
+++ b/src/frontend/src/app/sidebar/sidebar.component.html
@@ -15,5 +15,9 @@
   </ul>
 </div>
 <div class="sidebar__footer">
-
+  <ul>
+    <li class="menu__item" (click)="logout()">
+      Logout
+    </li>
+  </ul>
 </div>
