--- a/src/sts/Views/Account/Login.cshtml
+++ b/src/sts/Views/Account/Login.cshtml
@@ -30,6 +30,9 @@
                                 <label asp-for="Password"></label>
                                 <input type="password" class="form-control" placeholder="Password" asp-for="Password" autocomplete="off">
                             </div>
+                            <div class="form-group">
+                              Uers: admin/bob/alice, Password: password
+                            </div>
                             @if (Model.AllowRememberLogin)
                             {
                                 <div class="form-group">
